# Animator_335_project

./: README.md  movie.anim  risks.txt
CanadianExperienceLib/: Actor.h  Drawable.h  MachineDrawable.cpp  MachineDrawable.h  Picture.cpp  Picture.h  PictureFactory.cpp  Timeline.cpp  Timeline.h  TimelineDlg.cpp  TimelineDlg.h  ViewEdit.cpp  ViewEdit.h
MachineLib/: AirSink.cpp  AirSink.h  AirSource.cpp  AirSource.h  CMakeLists.txt  CardReader.cpp  CardReader.h  Clamp.cpp  Clamp.h  Component.cpp  Component.h  Cylinder.cpp  Cylinder.h  Cymbal.cpp  Cymbal.h  Drum.cpp  Drum.h  Instrument.cpp  Instrument.h  Machine.cpp  Machine.h  MachineFactory.cpp  MachineFactory.h  MachineSystemActual.cpp  MachineSystemActual.h  MachineSystemFactory.cpp  MachineTwoFactory.cpp  MachineTwoFactory.h  Pipe.cpp  Pipe.h  Shape.cpp  Shape.h  StruckInstrument.cpp  StruckInstrument.h  Tubing.cpp  Tubing.h
MachineTests/: CMakeLists.txt  ComponentTest.cpp
resources/xrc/: main.fbp  main.xrc
